채팅 웹소켓 뼈대만

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="commu"></div>
                 </div>
-                <span>채팅</span>
+                <span onclick="location.href='/chat/chatList'">채팅</span>
             </div>
             <div class="login">
                 로그인
