로그인작업중

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,9 +24,7 @@
                 </div>
                 <span onclick="location.href='/chat/chatList'">채팅</span>
             </div>
-            <div class="login">
-                로그인
-            </div>
+            <div class="login" onclick="location.href='/login'">로그인</div>
         </div>
 
         <!-- 반응형 768px 미만 -->
