--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,6 +13,7 @@
             <p>헤더작업중</p>
             <a href="/user/list">회원목록</a>
             <a href="/user/signUp">회원가입</a>
+            <p th:text="${session.userid}"></p>
         </div>
     </div>
 </body>
