--- a/src/main/resources/templates/user/signUp.html
+++ b/src/main/resources/templates/user/signUp.html
@@ -8,29 +8,34 @@
 </head>
 
 <body>
-    <h1>회원가입</h1>
-    <form action="/user/signUp" method="post">
+    <hedaer th:replace="~{fragments/header :: headerFragment}"></hedaer>
+    <div class="wrap">
+        <div class="contents">
+            <h1>회원가입</h1>
+            <form action="/user/signUp" method="post">
 
-        <table>
-            <tr>
-                <td>아이디</td>
-                <td><input type="text" name="userid" id="userid"></td>
-            </tr>
-            <tr>
-                <td>비밀번호</td>
-                <td><input type="text" name="password" id="password"></td>
-            </tr>
-            <tr>
-                <td>이름</td>
-                <td><input type="text" name="username" id="username"></td>
-            </tr>
-            <tr>
-                <td>이메일</td>
-                <td><input type="text" name="email" id="email"></td>
-            </tr>
-        </table>
-        <input type="submit" value="회원가입"><button onclick="location.href='/'">뒤로가기</button>
-    </form>
+                <table>
+                    <tr>
+                        <td>아이디</td>
+                        <td><input type="text" name="userid" id="userid"></td>
+                    </tr>
+                    <tr>
+                        <td>비밀번호</td>
+                        <td><input type="text" name="password" id="password"></td>
+                    </tr>
+                    <tr>
+                        <td>이름</td>
+                        <td><input type="text" name="username" id="username"></td>
+                    </tr>
+                    <tr>
+                        <td>이메일</td>
+                        <td><input type="text" name="email" id="email"></td>
+                    </tr>
+                </table>
+                <input type="submit" value="회원가입"><button onclick="location.href='/'">뒤로가기</button>
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
