--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        input {
+            text-align: right;
+        }
+        .contents input {
+            width: 130px;
+        }
+    </style>
 </head>
+
 <body>
     <header th:replace="~{fragments/header :: headerFragment}"></header>
     <div class="wrap">
@@ -13,55 +23,76 @@
                 <a href="/user/list">회원목록</a>
                 <a href="/user/signUp">회원가입</a>
             </th:block>
-            <span>현재 최저 시급은 </span><span id="money"></span><span>원 입니다.</span>
+            <span class="year"></span><span>년 현재 최저 시급은 </span><span id="money"></span><span>원 입니다.</span>
             <div>
                 <table>
                     <tr>
                         <td>시급</td>
-                        <td><input id="money2" type="number" min="0"></td>
+                        <td><input id="money2" oninput="hour_ex()" type="number" min="0"></td>
                     </tr>
                     <tr>
-                        <td>하루 근무시간</td>
-                        <td><input class="alba_hour" type="number" min="0"></td>
+                        <td>
+                            <select id="alba_select">
+                                <option value="0">하루 근무 시간</option>
+                                <option value="1">일주일 근무 시간</option>
+                            </select>
+                        </td>
+                        <td><input oninput="hour_ex()" class="alba_hour" type="number" min="0"></td>
                     </tr>
-                    <tr>
+                    <tr class="week_work">
                         <td>일주일 근무 일수</td>
-                        <td><input class="alba_week" type="number" min="0"></td>
+                        <td><input oninput="hour_ex()" class="alba_week" type="number" min="0"></td>
                     </tr>
                 </table>
-                <span class="alba_result">0</span>
+                <span>예상 월급은 </span><span class="alba_result">0</span><span>원 입니다.</span>
             </div>
         </div>
     </div>
 </body>
 <script th:inline="javascript">
-    var servicekey = /*[[${servicekey}]]*/'';
-    fetch(`https://api.odcloud.kr/api/15068774/v1/uddi:21d816e5-6c44-4e30-903d-e98e30a4f227?serviceKey=${servicekey}`)
-    .then(resp => resp.json())
-    .then(result => {
-        console.log(result.data);
-        result.data.forEach(e => {
-            if(new Date().getFullYear() == e.연도){
-                document.querySelector('#money').textContent = e.시간급;
-                document.querySelector('#money2').value = e.시간급;
-            }
-        });
-    })
-    document.querySelector('#money2').addEventListener('input', (e) => {
-        hour_ex();
+    // 연도별 최저시급 공공데이터 api
+    // var servicekey = /*[[${servicekey}]]*/'';
+    // fetch(`https://api.odcloud.kr/api/15068774/v1/uddi:21d816e5-6c44-4e30-903d-e98e30a4f227?serviceKey=${servicekey}`)
+    // .then(resp => resp.json())
+    // .then(result => {
+    //     console.log(result.data);
+    //     result.data.forEach(e => {
+    //         if(new Date().getFullYear() == e.연도){
+    //             document.querySelector('#money').textContent = e.시간급;
+    //             document.querySelector('#money2').value = e.시간급;
+    //         }
+    //     });
+    // })
+
+    JSON.parse(/*[[${alba}]]*/).data.forEach(e => {
+        if (new Date().getFullYear() == e.연도) {
+            document.querySelector('.year').textContent = e.연도;
+            document.querySelector('#money').textContent = e.시간급;
+            document.querySelector('#money2').value = e.시간급;
+        }
     });
-    document.querySelector('.alba_hour').addEventListener('input', (e) => {
-        hour_ex();
-    });
-    document.querySelector('.alba_week').addEventListener('input', (e) => {
-        hour_ex();
+    document.querySelector('#alba_select').addEventListener('change', e => {
+        if (document.querySelector('#alba_select').options.selectedIndex == 1) {
+            document.querySelector('.week_work').hidden = true;
+            hour_ex();
+        } else {
+            document.querySelector('.week_work').hidden = false;
+            hour_ex();
+        }
     });
 
     function hour_ex() {
-        var result = document.querySelector('#money2').value
-            * document.querySelector('.alba_hour').value
-            * document.querySelector('.alba_week').value * 4.35;
-        document.querySelector('.alba_result').textContent = result.toLocaleString();
+        if (document.querySelector('.week_work').hidden == true) {
+            var result = document.querySelector('#money2').value
+                * document.querySelector('.alba_hour').value * 4.345;
+            document.querySelector('.alba_result').textContent = result.toLocaleString();
+        } else {
+            var result = document.querySelector('#money2').value
+                * document.querySelector('.alba_hour').value
+                * document.querySelector('.alba_week').value * 4.345;
+            document.querySelector('.alba_result').textContent = result.toLocaleString();
+        }
     }
 </script>
+
 </html>
