--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,11 +20,12 @@
                         </tr>
                         <tr>
                             <td>비밀번호</td>
-                            <td><input type="text" name="password" id=""></td>
+                            <td><input type="password" name="password" id=""></td>
                         </tr>
                         <tr>
                             <td colspan="2">
                                 <input style="float: right;" type="submit" value="로그인">
+                                <input style="float: right;" type="button" onclick="location.href='/user/signUp'" value="회원가입">
                             </td>
                         </tr>
                     </table>
