--- a/src/main/resources/templates/user/signUp.html
+++ b/src/main/resources/templates/user/signUp.html
@@ -32,7 +32,7 @@
                         <td><input type="text" name="email" id="email"></td>
                     </tr>
                 </table>
-                <input type="submit" value="회원가입"><button onclick="location.href='/'">뒤로가기</button>
+                <input type="submit" value="회원가입"><button onclick="history.back">뒤로가기</button>
             </form>
         </div>
     </div>
